--- a/src/components/Homepage/styles.scss
+++ b/src/components/Homepage/styles.scss
@@ -1,23 +1,20 @@
 @import "../App.scss";
 .homepage__container {
   overflow-y: scroll;
-  max-width: 100vw;
-  box-sizing: border-box;
   height: 100vh;
   .vid__container {
-    width: 90vw;
+    width: 100vw;
     height: 30%;
     display: flex;
     justify-content: center;
     flex-direction: column;
     .video {
-      width: 100%;
-      height: 80%;
+      height: 100%;
       background-image: url("../../assets/images.jpeg");
-      background-size: cover;
+      background-size: contain;
+      background-repeat: no-repeat;
     }
     .video__description {
-      margin-top: 1rem;
       display: flex;
       justify-content: space-around;
       align-items: center;
